[package]
name = "bevy_match3"
authors = ["Troels \"Sheepyhead\" Jessen <trojes@tuta.io>"]
version = "0.0.1"
edition = "2021"
description = "A logic library for quickly adding a match-3 system to any bevy project"
license-file = "LICENSE"
homepage = "https://github.com/Sheepyhead/bevy_match3"
repository = "https://github.com/Sheepyhead/bevy_match3"
keywords = ["gamedev", "bevy"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
rand = "0.8.5"
queues = "1.1.0"
